--- a/FineDust_Copy/Resources/Info.plist
+++ b/FineDust_Copy/Resources/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>원활한 서비스를 이용하기 위해 위치서비스가 필요합니다.</string>
 </dict>
 </plist>
