--- a/FineDust_Copy/Resources/Info.plist
+++ b/FineDust_Copy/Resources/Info.plist
@@ -50,24 +50,24 @@
 	<string>원활한 서비스를 이용하기 위해 위치서비스가 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>SF-Pro-Display-Black</string>
-		<string>SF-Pro-Display-BlackItalic</string>
-		<string>SF-Pro-Display-Bold</string>
-		<string>SF-Pro-Display-BoldItalic</string>
-		<string>SF-Pro-Display-Heavy</string>
-		<string>SF-Pro-Display-HeavyItalic</string>
-		<string>SF-Pro-Display-Light</string>
-		<string>SF-Pro-Display-LightItalic</string>
-		<string>SF-Pro-Display-Medium</string>
-		<string>SF-Pro-Display-MediumItalic</string>
-		<string>SF-Pro-Display-Regular</string>
-		<string>SF-Pro-Display-RegularItalic</string>
-		<string>SF-Pro-Display-Semibold</string>
-		<string>SF-Pro-Display-SemiboldItalic</string>
-		<string>SF-Pro-Display-Thin</string>
-		<string>SF-Pro-Display-ThinItalic</string>
-		<string>SF-Pro-Display-Ultralight</string>
-		<string>SF-Pro-Display-UltralightItalic</string>
+		<string>SF-Pro-Display-Black.otf</string>
+		<string>SF-Pro-Display-BlackItalic.otf</string>
+		<string>SF-Pro-Display-Bold.otf</string>
+		<string>SF-Pro-Display-BoldItalic.otf</string>
+		<string>SF-Pro-Display-Heavy.otf</string>
+		<string>SF-Pro-Display-HeavyItalic.otf</string>
+		<string>SF-Pro-Display-Light.otf</string>
+		<string>SF-Pro-Display-LightItalic.otf</string>
+		<string>SF-Pro-Display-Medium.otf</string>
+		<string>SF-Pro-Display-MediumItalic.otf</string>
+		<string>SF-Pro-Display-Regular.otf</string>
+		<string>SF-Pro-Display-RegularItalic.otf</string>
+		<string>SF-Pro-Display-Semibold.otf</string>
+		<string>SF-Pro-Display-SemiboldItalic.otf</string>
+		<string>SF-Pro-Display-Thin.otf</string>
+		<string>SF-Pro-Display-ThinItalic.otf</string>
+		<string>SF-Pro-Display-Ultralight.otf</string>
+		<string>SF-Pro-Display-UltralightItalic.otf</string>
 	</array>
 </dict>
 </plist>
